--- a/nn.html
+++ b/nn.html
@@ -405,7 +405,7 @@
 <section style="background: #fef8e7;">
   <h2>مزايا حصرية</h2>
   <div class="badges">
-    <div style="background: #ffd700;">🔒 تمويل آمن</div>
+    <div style="background: #ffd700;">🔒 سامر تمويل آمن</div>
     <div style="background: #3b0a77;">⚡ موافقة فورية</div>
     <div style="background: #25D366;">💬 طلب عبر واتساب</div>
     <div style="background: #8c3aff;">📱 أحدث الأجهزة</div>
