--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
 <header>
     <div class="site-title">4 <span>STORE</span> × إمكان</div>
-  <img src="83.png" alt="4 STORE Logo" class="logo" />
+  <img src="https://4-store.netlify.app/83.png" alt="4 STORE Logo" class="logo" />
 </header>
 
 <nav>
