--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>4 STORE </title>
-  <img src="https://4-store.netlify.app/83.png" alt="4 STORE Logo" style="height: 60px;">
+  <link rel="icon" href="https://4-store.netlify.app/83.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@400;700&display=swap" rel="stylesheet" />
   <meta name="description" content="احصل على iPhone 16 Pro Max بالتقسيط الفوري وبدون دفعة أولى من إمكان عبر متجر 4 STORE." />
   <meta name="keywords" content="iPhone تقسيط, إمكان, فور ستور, تمويل فوري, بدون كفيل" />
