--- a/vb.html
+++ b/vb.html
@@ -3,25 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>4 STORE - طلب iPhone</title>
+  <title>4 STORE - استعلام عن الطلب</title>
   <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Almarai', sans-serif;
       background: #f9f9fb url('https://www.transparenttextures.com/patterns/symphony.png');
-      color: #222;
-      padding: 20px;
-      max-width: 400px;
-      margin: 40px auto;
-      direction: rtl;
+      color: #222; padding: 20px; max-width: 400px; margin: 40px auto; direction: rtl;
     }
-    h1 { color: #3b0a77; text-align: center; }
+    h1 { color: #3b0a77; text-align: center; margin-bottom: 20px; }
     form {
-      background: white;
-      padding: 20px;
-      border-radius: 15px;
+      background: white; padding: 20px; border-radius: 15px;
       box-shadow: 0 6px 20px rgba(140,58,255,0.15);
-      margin-bottom: 20px;
     }
     label { display: block; margin: 15px 0 5px; font-weight: 700; color: #3b0a77; }
     input[type="text"], input[type="tel"] {
@@ -36,175 +29,66 @@
       transition: box-shadow 0.3s ease;
     }
     button:hover { box-shadow: 0 0 25px #25D366; }
-    #responseMsg, #errorMsg, #linkTrack {
-      margin-top: 20px; padding: 15px; border-radius: 10px; text-align: center; display: none;
+    #trackResult {
+      margin-top: 20px; padding: 15px; border-radius: 10px;
+      font-weight: 700; text-align: center; display: none;
     }
-    #responseMsg {
+    #trackResult.success {
       background: #d4edda; color: #155724; border: 1px solid #c3e6cb;
     }
-    #errorMsg {
+    #trackResult.error {
       background: #f8d7da; color: #721c24; border: 1px solid #f5c6cb;
     }
-    #linkTrack {
-      background: #eef9f3; color: #128C7E; border: 1px solid #c3e6cb;
-    }
-    #linkTrack a {
-      color: #25D366; font-weight: bold; text-decoration: none; margin-left: 10px;
-    }
-    .spinner {
-      border: 5px solid #f3f3f3; border-top: 5px solid #25D366;
-      border-radius: 50%; width: 50px; height: 50px;
-      animation: spin 1s linear infinite; margin: 30px auto; display: none;
-    }
-    @keyframes spin { to { transform: rotate(360deg); } }
-    #successAnimation { display: none; text-align: center; margin-top: 30px; }
-    .checkmark-circle {
-      margin: 0 auto; width: 100px; height: 100px; background: #3B0A77;
-      border-radius: 50%; display: flex; justify-content: center; align-items: center;
-      animation: pop 0.6s ease-out;
-    }
-    .checkmark { width: 25px; height: 12px; border-left: 4px solid #fff; border-bottom: 4px solid #fff; transform: rotate(-45deg); }
-    @keyframes pop { 0% { transform: scale(0.5); opacity: 0; } 100% { transform: scale(1); opacity: 1; } }
-    .sparkles::before, .sparkles::after {
-      content: ""; position: absolute; top: -30px; font-size: 14px; color: #aef1dd; animation: twinkle 1.5s infinite;
-    }
-    @keyframes twinkle { 0%,100% { opacity: 0.2; } 50% { opacity: 1; } }
-    .success-text {
-      margin-top: 15px; font-size: 1.3em; font-weight: bold; color: #3B0A77;
-      animation: fadeIn 1s ease-in;
-    }
-    @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
     footer { text-align: center; margin-top: 40px; color: #888; font-size: 0.9em; }
   </style>
 </head>
 <body>
 
-  <h1>طلب iPhone</h1>
+  <h1>استعلام عن الطلب</h1>
 
-  <form id="orderForm" aria-label="نموذج طلب الجهاز">
-    <label for="name">الاسم:</label>
-    <input type="text" id="name" placeholder="ادخل اسمك" required />
-    <label for="phone">رقم الجوال:</label>
-    <input type="tel" id="phone" placeholder="05xxxxxxxx" required pattern="05[0-9]{8}" />
-    <label for="device">اسم الجهاز:</label>
-    <input type="text" id="device" value="iPhone 16 Pro Max" readonly />
-    <button type="submit">أرسل الطلب</button>
+  <form id="trackForm" aria-label="نموذج استعلام">
+    <label for="trackName">الاسم:</label>
+    <input type="text" id="trackName" placeholder="ادخل اسمك" required />
+    <label for="trackPhone">رقم الجوال:</label>
+    <input type="tel" id="trackPhone" placeholder="05xxxxxxxx" required pattern="05[0-9]{8}" />
+    <label for="trackCode">كود الطلب:</label>
+    <input type="text" id="trackCode" placeholder="ادخل كود الطلب" required />
+    <button type="submit">استعلم</button>
   </form>
 
-  <div id="spinner" class="spinner"></div>
-
-  <div id="successAnimation">
-    <div class="checkmark-circle">
-      <div class="checkmark"></div>
-      <div class="sparkles"></div>
-    </div>
-    <p class="success-text">تم بنجاح ✅</p>
-  </div>
-
-  <div id="responseMsg" role="alert" aria-live="polite"></div>
-  <div id="errorMsg"   role="alert" aria-live="assertive"></div>
-
-  <div id="linkTrack">
-    رقم طلبك : <strong id="displayCode"></strong>
-    <a href="vb.html">استعلام</a>
-  </div>
+  <div id="trackResult" role="alert" aria-live="polite"></div>
 
   <footer>
     جميع الحقوق محفوظة &copy; 4STORE - <span dir="ltr">2025</span>
   </footer>
 
   <script>
-    const webhookURL = "https://discord.com/api/webhooks/1378768286178742432/08gieZ8nof2XPyIJ_AQmVleQl17tBuxwj6WGhQGbl_TayVPMghWfeSjugt8lHQCIidkm";
-    const COOLDOWN_MINUTES = 24 * 60; // 1440 دقيقة = 24 ساعة
+    const trackForm = document.getElementById('trackForm');
+    const trackResult = document.getElementById('trackResult');
 
-    const orderForm = document.getElementById('orderForm');
-    const spinner = document.getElementById('spinner');
-    const successAnimation = document.getElementById('successAnimation');
-    const responseMsg = document.getElementById('responseMsg');
-    const errorMsg = document.getElementById('errorMsg');
-    const linkTrack = document.getElementById('linkTrack');
-    const displayCode = document.getElementById('displayCode');
-
-    function showError(msg) {
-      errorMsg.textContent = msg;
-      errorMsg.style.display = 'block';
-      responseMsg.style.display = successAnimation.style.display = spinner.style.display = linkTrack.style.display = 'none';
-    }
-
-    const previousOrder = JSON.parse(localStorage.getItem("orderData"));
-    if (previousOrder) {
-      const diff = Date.now() - previousOrder.timestamp;
-      const minutesPassed = diff / (1000 * 60);
-
-      if (minutesPassed >= COOLDOWN_MINUTES) {
-        localStorage.removeItem("orderData");
-      } else {
-        orderForm.style.display = 'none';
-        responseMsg.style.display = 'block';
-        const hoursLeft = Math.floor((COOLDOWN_MINUTES - minutesPassed) / 60);
-        const minutesLeft = Math.ceil((COOLDOWN_MINUTES - minutesPassed) % 60);
-        responseMsg.textContent = `⚠️ لقد قمت بإرسال طلب مسبقًا. الرجاء الانتظار ${hoursLeft} ساعة و${minutesLeft} دقيقة.`;
-        displayCode.textContent = previousOrder.code;
-        linkTrack.style.display = 'block';
-      }
-    }
-
-    orderForm.addEventListener('submit', async e => {
+    trackForm.addEventListener('submit', e => {
       e.preventDefault();
-      errorMsg.style.display = responseMsg.style.display = linkTrack.style.display = 'none';
-      spinner.style.display = 'block';
+      trackResult.style.display = 'none';
 
-      const name   = document.getElementById('name').value.trim();
-      const phone  = document.getElementById('phone').value.trim();
-      const device = document.getElementById('device').value.trim();
+      const data = JSON.parse(localStorage.getItem("orderData") || "{}");
+      const nameInput  = document.getElementById('trackName').value.trim();
+      const phoneInput = document.getElementById('trackPhone').value.trim();
+      const codeInput  = document.getElementById('trackCode').value.trim();
 
-      if (!name) { showError("⚠️ الرجاء إدخال الاسم."); return; }
-      if (!phone.match(/^05[0-9]{8}$/)) { showError("⚠️ رقم الجوال غير صحيح."); return; }
+      if (data.name === nameInput && data.phone === phoneInput && data.code === codeInput) {
+        const elapsed = Date.now() - data.timestamp;
+        let status = "📦 الطلب قيد المعالجة";
+        if (elapsed >= 4 * 3600000)      status = "✅ تم إنهاء الطلب";
+        else if (elapsed >= 3 * 3600000) status = "📱 تم فتح الطلب";
+        else if (elapsed >= 2 * 3600000) status = "🚀 الطلب قيد التنفيذ";
 
-      const code = Math.random().toString(36).substr(2,6).toUpperCase();
-      const timestamp = Date.now();
-
-      const payload = {
-        content: null,
-        embeds: [{
-          title: "طلب جديد من الموقع",
-          color: 7506394,
-          fields: [
-            { name:"الاسم", value:name, inline:true },
-            { name:"رقم الجوال", value:phone, inline:true },
-            { name:"اسم الجهاز", value:device, inline:true },
-            { name:"كود الطلب", value:code, inline:true }
-          ],
-          timestamp: new Date().toISOString()
-        }]
-      };
-
-      try {
-        const res = await fetch(webhookURL, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(payload)
-        });
-        spinner.style.display = 'none';
-        if (!res.ok) throw new Error();
-
-        localStorage.setItem("orderData", JSON.stringify({ name, phone, code, timestamp }));
-
-        orderForm.style.display = 'none';
-        successAnimation.style.display = 'block';
-
-        setTimeout(() => {
-          successAnimation.style.display = 'none';
-          responseMsg.textContent = "✅ تم استلام الطلب، سيتم التواصل معك قريبًا.";
-          responseMsg.style.display = 'block';
-          displayCode.textContent = code;
-          linkTrack.style.display = 'block';
-        }, 2500);
-
-      } catch {
-        spinner.style.display = 'none';
-        showError("🚫 فشل الإرسال. حاول لاحقاً.");
+        trackResult.textContent = `مرحباً ${nameInput}، حالة طلبك: ${status}`;
+        trackResult.className = 'success';
+      } else {
+        trackResult.textContent = "🚫 لا يوجد طلب مطابق للمعلومات المدخلة.";
+        trackResult.className = 'error';
       }
+      trackResult.style.display = 'block';
     });
   </script>
 </body>
