--- a/nm.html
+++ b/nm.html
@@ -39,15 +39,9 @@
     #responseMsg, #errorMsg, #linkTrack {
       margin-top: 20px; padding: 15px; border-radius: 10px; text-align: center; display: none;
     }
-    #responseMsg {
-      background: #d4edda; color: #155724; border: 1px solid #c3e6cb;
-    }
-    #errorMsg {
-      background: #f8d7da; color: #721c24; border: 1px solid #f5c6cb;
-    }
-    #linkTrack {
-      background: #eef9f3; color: #128C7E; border: 1px solid #c3e6cb;
-    }
+    #responseMsg { background: #d4edda; color: #155724; border: 1px solid #c3e6cb; }
+    #errorMsg   { background: #f8d7da; color: #721c24; border: 1px solid #f5c6cb; }
+    #linkTrack  { background: #eef9f3; color: #128C7E; border: 1px solid #c3e6cb; }
     #linkTrack a {
       color: #25D366; font-weight: bold; text-decoration: none; margin-left: 10px;
     }
@@ -65,10 +59,6 @@
     }
     .checkmark { width: 25px; height: 12px; border-left: 4px solid #fff; border-bottom: 4px solid #fff; transform: rotate(-45deg); }
     @keyframes pop { 0% { transform: scale(0.5); opacity: 0; } 100% { transform: scale(1); opacity: 1; } }
-    .sparkles::before, .sparkles::after {
-      content: ""; position: absolute; top: -30px; font-size: 14px; color: #aef1dd; animation: twinkle 1.5s infinite;
-    }
-    @keyframes twinkle { 0%,100% { opacity: 0.2; } 50% { opacity: 1; } }
     .success-text {
       margin-top: 15px; font-size: 1.3em; font-weight: bold; color: #3B0A77;
       animation: fadeIn 1s ease-in;
@@ -84,20 +74,21 @@
   <form id="orderForm" aria-label="نموذج طلب الجهاز">
     <label for="name">الاسم:</label>
     <input type="text" id="name" placeholder="ادخل اسمك" required />
+
     <label for="phone">رقم الجوال:</label>
     <input type="tel" id="phone" placeholder="05xxxxxxxx" required pattern="05[0-9]{8}" />
+
     <label for="device">اسم الجهاز:</label>
-    <input type="text" id="device" value="iPhone 16 Pro Max" readonly />
+    <input type="text" id="device" readonly />
+
+    <div id="deviceDetails" style="margin-top: 10px; font-size: 1em; color: #3b0a77;"></div>
+
     <button type="submit">أرسل الطلب</button>
   </form>
 
   <div id="spinner" class="spinner"></div>
-
   <div id="successAnimation">
-    <div class="checkmark-circle">
-      <div class="checkmark"></div>
-      <div class="sparkles"></div>
-    </div>
+    <div class="checkmark-circle"><div class="checkmark"></div><div class="sparkles"></div></div>
     <p class="success-text">تم بنجاح ✅</p>
   </div>
 
@@ -109,13 +100,25 @@
     <a href="vb.html">استعلام</a>
   </div>
 
-  <footer>
-    جميع الحقوق محفوظة &copy; 4STORE - <span dir="ltr">2025</span>
-  </footer>
+  <footer>جميع الحقوق محفوظة &copy; 4STORE - <span dir="ltr">2025</span></footer>
 
   <script>
     const webhookURL = "https://discord.com/api/webhooks/1378768286178742432/08gieZ8nof2XPyIJ_AQmVleQl17tBuxwj6WGhQGbl_TayVPMghWfeSjugt8lHQCIidkm";
-    const COOLDOWN_MINUTES = 24 * 60; // 1440 دقيقة = 24 ساعة
+    const COOLDOWN_MINUTES = 1440; // 24 ساعة
+
+    // استخراج البيانات من الرابط
+    const params = new URLSearchParams(window.location.search);
+    const selectedDevice = params.get("device") || "iPhone 16 Pro Max";
+    const cashPrice = parseInt(params.get("cash")) || 5199;
+    const installmentPrice = parseInt(params.get("installments")) || 5600;
+    const monthly = Math.ceil(installmentPrice / 5);
+
+    document.getElementById("device").value = selectedDevice;
+    document.getElementById("deviceDetails").innerHTML = `
+      💰 السعر كاش: ${cashPrice.toLocaleString()} ريال<br>
+      💳 السعر بالتقسيط: ${installmentPrice.toLocaleString()} ريال<br>
+      📆 القسط الشهري: ${monthly.toLocaleString()} ريال × 5 شهور
+    `;
 
     const orderForm = document.getElementById('orderForm');
     const spinner = document.getElementById('spinner');
@@ -135,10 +138,7 @@
     if (previousOrder) {
       const diff = Date.now() - previousOrder.timestamp;
       const minutesPassed = diff / (1000 * 60);
-
-      if (minutesPassed >= COOLDOWN_MINUTES) {
-        localStorage.removeItem("orderData");
-      } else {
+      if (minutesPassed < COOLDOWN_MINUTES) {
         orderForm.style.display = 'none';
         responseMsg.style.display = 'block';
         const hoursLeft = Math.floor((COOLDOWN_MINUTES - minutesPassed) / 60);
@@ -146,6 +146,8 @@
         responseMsg.textContent = `⚠️ لقد قمت بإرسال طلب مسبقًا. الرجاء الانتظار ${hoursLeft} ساعة و${minutesLeft} دقيقة.`;
         displayCode.textContent = previousOrder.code;
         linkTrack.style.display = 'block';
+      } else {
+        localStorage.removeItem("orderData");
       }
     }
 
@@ -154,14 +156,14 @@
       errorMsg.style.display = responseMsg.style.display = linkTrack.style.display = 'none';
       spinner.style.display = 'block';
 
-      const name   = document.getElementById('name').value.trim();
-      const phone  = document.getElementById('phone').value.trim();
+      const name = document.getElementById('name').value.trim();
+      const phone = document.getElementById('phone').value.trim();
       const device = document.getElementById('device').value.trim();
 
-      if (!name) { showError("⚠️ الرجاء إدخال الاسم."); return; }
-      if (!phone.match(/^05[0-9]{8}$/)) { showError("⚠️ رقم الجوال غير صحيح."); return; }
+      if (!name) return showError("⚠️ الرجاء إدخال الاسم.");
+      if (!phone.match(/^05[0-9]{8}$/)) return showError("⚠️ رقم الجوال غير صحيح.");
 
-      const code = Math.random().toString(36).substr(2,6).toUpperCase();
+      const code = Math.random().toString(36).substr(2, 6).toUpperCase();
       const timestamp = Date.now();
 
       const payload = {
@@ -170,10 +172,10 @@
           title: "طلب جديد من الموقع",
           color: 7506394,
           fields: [
-            { name:"الاسم", value:name, inline:true },
-            { name:"رقم الجوال", value:phone, inline:true },
-            { name:"اسم الجهاز", value:device, inline:true },
-            { name:"كود الطلب", value:code, inline:true }
+            { name: "الاسم", value: name, inline: true },
+            { name: "رقم الجوال", value: phone, inline: true },
+            { name: "اسم الجهاز", value: device, inline: true },
+            { name: "كود الطلب", value: code, inline: true }
           ],
           timestamp: new Date().toISOString()
         }]
