--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>4 STORE</title>
+  <title>4 qSTORE</title>
   <link rel="icon" href="https://4-store.netlify.app/83.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@400;700&display=swap" rel="stylesheet" />
   <meta name="description" content="احصل على iPhone 16 Pro Max بالتقسيط الفوري وبدون دفعة أولى من إمكان عبر متجر 4 STORE." />
