--- a/vb.html
+++ b/vb.html
@@ -148,7 +148,7 @@
         else if (elapsed >= 3 * 3600000) status = "📱 تم فتح الطلب";
         else if (elapsed >= 2 * 3600000) status = "🚀 الطلب قيد التنفيذ";
 
-        message = `مرحباً ${nameInput}،\n\nحالة طلبك : ${status}`;
+        message = `:مرحباً ${nameInput}،\n\nحالة طلبك : ${status}`;
         statusClass = 'success';
         successTitle.style.display = 'block';
       } else {
