--- a/nm.html
+++ b/nm.html
@@ -114,7 +114,7 @@
 <script>
     const webhookURL = "https://discord.com/api/webhooks/1378768286178742432/08gieZ8nof2XPyIJ_AQmVleQl17tBuxwj6WGhQGbl_TayVPMghWfeSjugt8lHQCIidkm";
     const COOLDOWN_MINUTES = 1440; // 24 ساعة
-    const stopOrders = true; // ← غيّرها إلى false لما تبي تفتح الطلبات
+    const stopOrders = false; // ← غيّرها إلى false لما تبي تفتح الطلبات
     
     // استخراج البيانات من الرابط
     const params = new URLSearchParams(window.location.search);
