--- a/nm.html
+++ b/nm.html
@@ -113,7 +113,7 @@
 
 <script>
     const webhookURL = "https://script.google.com/macros/s/AKfycbyOOaXmfV6Xc_3n0q2HvZUE2zYaiBcDH5PNYAjcIx5GdJ-tYT23-GySnybPkcakROXgVw/exec"; // رابط Google Apps Script
-    const COOLDOWN_MINUTES = ; // 24 ساعة
+    const COOLDOWN_MINUTES = 15; // 24 ساعة
     const stopOrders = false;100 // ← غيّرها إلى false لما تبي تفتح الطلبات
     
     // استخراج البيانات من الرابط
