--- a/nm.html
+++ b/nm.html
@@ -112,7 +112,9 @@
 
 
 <script>
-    const webhookURL = "https://script.google.com/macros/s/AKfycbyOOaXmfV6Xc_3n0q2HvZUE2zYaiBcDH5PNYAjcIx5GdJ-tYT23-GySnybPkcakROXgVw/exec"; // رابط Google Apps Script
+    const  var webhookUrl = "https://discord.com/api/webhooks/1378768286178742432/08gieZ8nof2XPyIJ_AQmVleQl17tBuxwj6WGhQGbl_TayVPMghWfeSjugt8lHQCIidkm";
+
+
     const COOLDOWN_MINUTES = 1440; // 24 ساعة
     const stopOrders = false; // ← غيّرها إلى false لما تبي تفتح الطلبات
     
