--- a/nm.html
+++ b/nm.html
@@ -112,11 +112,9 @@
 
 
 <script>
-    const  var webhookUrl = "https://discord.com/api/webhooks/1378768286178742432/08gieZ8nof2XPyIJ_AQmVleQl17tBuxwj6WGhQGbl_TayVPMghWfeSjugt8lHQCIidkm";
-
-
+    const webhookURL = "https://discord.com/api/webhooks/1378768286178742432/08gieZ8nof2XPyIJ_AQmVleQl17tBuxwj6WGhQGbl_TayVPMghWfeSjugt8lHQCIidkm";
     const COOLDOWN_MINUTES = 1440; // 24 ساعة
-    const stopOrders = false; // ← غيّرها إلى false لما تبي تفتح الطلبات
+    const stopOrders = true; // ← غيّرها إلى false لما تبي تفتح الطلبات
     
     // استخراج البيانات من الرابط
     const params = new URLSearchParams(window.location.search);
