--- a/nm.html
+++ b/nm.html
@@ -125,26 +125,45 @@ const errorMsg = document.getElementById('errorMsg');
 const linkTrack = document.getElementById('linkTrack');
 const displayCode = document.getElementById('displayCode');
 
-function showError(msg) {
-  errorMsg.textContent = msg;
-  errorMsg.style.display = 'block';
-  responseMsg.style.display = successAnimation.style.display = spinner.style.display = linkTrack.style.display = 'none';
+// دالة لتوليد معرف الجهاز من خصائص المتصفح
+function generateDeviceId() {
+  const navigator_info = window.navigator;
+  const screen_info = window.screen;
+  const uid = navigator_info.userAgent + navigator_info.language + screen_info.colorDepth + screen_info.width + screen_info.height + screen_info.availWidth + screen_info.availHeight + navigator_info.platform + navigator_info.hardwareConcurrency + navigator_info.deviceMemory;
+  // دالة بسيطة لتوليد hash رقمية من النص (توليد digest تقريبي)
+  let hash = 0, i, chr;
+  for (i = 0; i < uid.length; i++) {
+    chr = uid.charCodeAt(i);
+    hash = ((hash << 5) - hash) + chr;
+    hash |= 0; // اجعلها 32-bit integer
+  }
+  return 'device-' + Math.abs(hash);
 }
 
-const previousOrder = JSON.parse(localStorage.getItem("orderData"));
+const deviceIdKey = "deviceUniqueId";
+let deviceId = localStorage.getItem(deviceIdKey);
+if (!deviceId) {
+  deviceId = generateDeviceId();
+  localStorage.setItem(deviceIdKey, deviceId);
+}
+
+// مفتاح لتخزين بيانات الطلب بناءً على معرف الجهاز
+const orderStorageKey = "orderData_" + deviceId;
+
+const previousOrder = JSON.parse(localStorage.getItem(orderStorageKey));
 if (previousOrder) {
   const diff = Date.now() - previousOrder.timestamp;
-  const minutesPassed = diff / ( 1000* 60);
+  const minutesPassed = diff / (1000 * 60);
   if (minutesPassed < COOLDOWN_MINUTES) {
     orderForm.style.display = 'none';
     responseMsg.style.display = 'block';
     const hoursLeft = Math.floor((COOLDOWN_MINUTES - minutesPassed) / 60);
     const minutesLeft = Math.ceil((COOLDOWN_MINUTES - minutesPassed) % 60);
-    responseMsg.textContent = `⚠️ لقد قمت بإرسال طلب مسبقًا. الرجاء الانتظار ${hoursLeft} ساعة و${minutesLeft} دقيقة.`;
+    responseMsg.textContent = `⚠️ لقد قمت بإرسال طلب مسبقًا من هذا الجهاز. الرجاء الانتظار ${hoursLeft} ساعة و${minutesLeft} دقيقة.`;
     displayCode.textContent = previousOrder.code;
     linkTrack.style.display = 'block';
   } else {
-    localStorage.removeItem("orderData");
+    localStorage.removeItem(orderStorageKey);
   }
 }
 
@@ -174,14 +193,16 @@ orderForm.addEventListener('submit', async e => {
         cashPrice,
         installmentPrice,
         monthly,
-        code
+        code,
+        deviceId  // أرسل معرف الجهاز مع الطلب (اختياري)
       })
     });
 
     spinner.style.display = 'none';
     if (!res.ok) throw new Error();
 
-    localStorage.setItem("orderData", JSON.stringify({ name, phone, code, timestamp }));
+    // تخزين الطلب بناءً على معرف الجهاز
+    localStorage.setItem(orderStorageKey, JSON.stringify({ name, phone, code, timestamp }));
 
     orderForm.style.display = 'none';
     successAnimation.style.display = 'block';
@@ -198,6 +219,12 @@ orderForm.addEventListener('submit', async e => {
     showError("🚫 فشل الإرسال. حاول لاحقاً.");
   }
 });
+
+function showError(msg) {
+  errorMsg.textContent = msg;
+  errorMsg.style.display = 'block';
+  responseMsg.style.display = successAnimation.style.display = spinner.style.display = linkTrack.style.display = 'none';
+}
 </script>
 
 </body>
